Added header, nav, body text, footer

--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>THE 2020 GDS TECH FELLOWSHIP</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+<header>
+    <h1>THE 2020 GDS TECH FELLOWSHIP</h1>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="red"></a>
+    </nav>
+</header>
+
+<h2></h2>
+
+<footer>
+    <p>&copy;2020 GDS</p>
+</footer>
 </body>
 </html>
