--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>THE 2020 GDS TECH FELLOWSHIP</h1>
     <nav>
         <a href="index.html">Home</a> | 
-        <a href="https://www.goldendoorscholars.org/">Golden Door Scholars</a> |
-        <a href="https://roadtohire.org/">Road to Hire</a> |
-        <a href="https://www.redventures.com/">Red Ventures</a>
+        <a href="https://www.goldendoorscholars.org/" target="_blank">Golden Door Scholars</a> |
+        <a href="https://roadtohire.org/" target="_blank">Road to Hire</a> |
+        <a href="https://www.redventures.com/" target="_blank">Red Ventures</a>
     </nav>
 </header>
 
@@ -26,7 +26,7 @@
 <p>“Founded in 2000, Red Ventures is a portfolio of digital companies that brings consumers and brands together through powerful, customized online experiences. We use online marketplaces, strategic partnerships and passionate people to unleash transformative digital growth and solve complex problems across a variety of industries.”</p>
 
 <footer>
-    <p>&copy;2020 GDS</p>
+    <p>&copy; 2020 GDS</p>
 </footer>
 </body>
 </html>
