--- a/index.html
+++ b/index.html
@@ -6,27 +6,29 @@
     <title>THE 2020 GDS TECH FELLOWSHIP</title>
 </head>
 <body>
-<header>
-    <h1>THE 2020 GDS TECH FELLOWSHIP</h1>
-    <nav>
-        <a href="index.html">Home</a> | 
-        <a href="https://www.goldendoorscholars.org/" target="_blank">Golden Door Scholars</a> |
-        <a href="https://roadtohire.org/" target="_blank">Road to Hire</a> |
-        <a href="https://www.redventures.com/" target="_blank">Red Ventures</a>
-    </nav>
-</header>
+    <header>
+        <h1>THE 2020 GDS TECH FELLOWSHIP</h1>
+        <nav>
+            <a href="index.html">Home</a> | 
+            <a href="https://www.goldendoorscholars.org/" target="_blank">Golden Door Scholars</a> |
+            <a href="https://roadtohire.org/" target="_blank">Road to Hire</a> |
+            <a href="https://www.redventures.com/" target="_blank">Red Ventures</a> |
+            <a href="about.html">About Us</a> |
+            <a href="contact.html">Contact Us</a>
+        </nav>
+    </header>
 
-<h2>The Tech Fellowship</h2>
-<p>A fellowship provided to GDS Students to learn technical skills and develop the professional profile.</p>
+    <h2>The Tech Fellowship</h2>
+    <p>A fellowship provided to GDS Students to learn technical skills and develop the professional profile.</p>
 
-<h2>Golden Door Scholars</h2>
-<p>A non-profit that provides DACA and undocumented students with a valuable scholarship. “As a Golden Door Scholar, each student receives a scholarship empowering her or him to earn a bachelor's degree and pursue a dream career. Eligible students may be high school seniors, recent high school graduates, or currently enrolled in college pursuing an undergraduate degree.”</p>
+    <h2>Golden Door Scholars</h2>
+    <p>A non-profit that provides DACA and undocumented students with a valuable scholarship. “As a Golden Door Scholar, each student receives a scholarship empowering her or him to earn a bachelor's degree and pursue a dream career. Eligible students may be high school seniors, recent high school graduates, or currently enrolled in college pursuing an undergraduate degree.”</p>
 
-<h2>Red Ventures</h2>
-<p>“Founded in 2000, Red Ventures is a portfolio of digital companies that brings consumers and brands together through powerful, customized online experiences. We use online marketplaces, strategic partnerships and passionate people to unleash transformative digital growth and solve complex problems across a variety of industries.”</p>
+    <h2>Red Ventures</h2>
+    <p>“Founded in 2000, Red Ventures is a portfolio of digital companies that brings consumers and brands together through powerful, customized online experiences. We use online marketplaces, strategic partnerships and passionate people to unleash transformative digital growth and solve complex problems across a variety of industries.”</p>
 
-<footer>
-    <p>&copy; 2020 GDS</p>
-</footer>
+    <footer>
+        <p>&copy; 2020 GDS</p>
+    </footer>
 </body>
 </html>
