--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <h2>Golden Door Scholars</h2>
     <p>A non-profit that provides DACA and undocumented students with a valuable scholarship. “As a Golden Door Scholar, each student receives a scholarship empowering her or him to earn a bachelor's degree and pursue a dream career. Eligible students may be high school seniors, recent high school graduates, or currently enrolled in college pursuing an undergraduate degree.”</p>
 
+    <h2>Road to Hire</h2>
+    <p>The non-profit division of Red Ventures located in RV4. “Hard work should be met with opportunity. Road to Hire connects underrepresented young adults with onramps to high-earning careers through paid technical training and college access.”</p>
+
     <h2>Red Ventures</h2>
     <p>“Founded in 2000, Red Ventures is a portfolio of digital companies that brings consumers and brands together through powerful, customized online experiences. We use online marketplaces, strategic partnerships and passionate people to unleash transformative digital growth and solve complex problems across a variety of industries.”</p>
 
