Added more content

--- a/contact.html
+++ b/contact.html
@@ -4,18 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
-        <h1>THE 2020 GDS TECH FELLOWSHIP</h1>
-        <nav>
-            <a href="index.html">Home</a> | 
-            <a href="https://www.goldendoorscholars.org/" target="_blank">Golden Door Scholars</a> |
-            <a href="https://roadtohire.org/" target="_blank">Road to Hire</a> |
-            <a href="https://www.redventures.com/" target="_blank">Red Ventures</a> |
-            <a href="about.html">About Us</a> |
-            <a href="contact.html">Contact Us</a>
-        </nav>
+        <div class="header-box">
+            <h1>THE 2020 GDS TECH FELLOWSHIP</h1>
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="https://www.goldendoorscholars.org/" target="_blank" class="GDS">Golden Door Scholars</a></li>
+                    <li><a href="https://roadtohire.org/" target="_blank" class="R2H">Road to Hire</a></li>
+                    <li><a href="https://www.redventures.com/" target="_blank"><span class="RV">Red</span> Ventures</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>   
     </header>
     
     <form>
